--- a/lab/lab04/SimpleMyDot/app/src/main/AndroidManifest.xml
+++ b/lab/lab04/SimpleMyDot/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity" />
-        <activity android:name=".EditActivity"></activity>
+        <activity android:name=".EditDotActivity"></activity>
     </application>
 
 </manifest>
