--- a/lab/lab05/SimpleMyDot/app/build.gradle
+++ b/lab/lab05/SimpleMyDot/app/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 
+
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -28,5 +31,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.pes.materialcolorpicker:library:1.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 }
