--- a/lab/lab07/MyLazyInstagram/app/build.gradle
+++ b/lab/lab07/MyLazyInstagram/app/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
@@ -37,7 +38,5 @@ dependencies {
 
     compile 'com.android.support:recyclerview-v7:26.1.0'
 
-
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
 }
