--- a/lab/lab07/Espresso/app/build.gradle
+++ b/lab/lab07/Espresso/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "kmitl.lab07.montita58070114.mylazyinstagram"
+        applicationId "kmitl.lab08.montita58070114.espresso"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -24,21 +24,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
-    compile 'com.github.bumptech.glide:glide:4.1.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
-
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-
-    compile 'com.mikhaellopez:circularimageview:3.0.2'
-
-    compile 'com.wang.avi:library:2.1.3'
 }
