--- a/lab/lab09/moneyflow/app/src/main/AndroidManifest.xml
+++ b/lab/lab09/moneyflow/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddTransactionActivity"></activity>
+        <activity android:name=".TransactionActivity" />
     </application>
 
 </manifest>
